--- a/css/wonal.css
+++ b/css/wonal.css
@@ -7,6 +7,21 @@ body {
     font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
+.video-block {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.video-block iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 a {
     color: #05b1e9;
     -webkit-transition: all .35s;
@@ -498,7 +513,7 @@ img::-moz-selection {
     background: 0 0;
 }
 body {
-    webkit-tap-highlight-color: #222;
+    -webkit-tap-highlight-color: #222;
 }
 .title-section {
     text-align: center;
